--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   preference_list: ^0.0.1
   bot_toast: ^4.0.3
   web_socket_channel: ^2.2.0
+  build_runner:
 
 dev_dependencies:
   flutter_test:
